Receipt area has been created. Receipt will display the items that have been added to the cart, the value of the items, and the total value of the cart. Items have been separated from the user information int he receipt table. Few CSS changes have been made to the receipt table.

--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email"><br>
 
-  <label for="ccinfo">Credit card Number:</label><br>
+  <label for="ccinfo">Credit card Number: (2222-2222-2222-2222)</label><br>
   <input type="text" id="ccinfo" name="ccinfo"><br>
 
-  <label for="ccmonth">Credit card expiry month:</label><br>
+  <label for="ccmonth">Credit card expiry month: (10-10)</label><br>
   <input type="text" id="ccmonth" name="ccmonth"><br>
 
   <label for="ccyear">Credit card expiry Year</label><br>
@@ -39,15 +39,14 @@
   <label for="item5">Number of cupcakes ($3)</label>
   <input type="text" id="item5" name="item5" value=""><br>
 
-  <input type="submit" value="Submit">
+  <input type="submit" value="Checkout">
 
 </form> 
 
 <div id="errors"></div>
 <table id="receipt">
     <tr>
-      <th>Item</th>
-      <th>Quantity</th>
+        <th>Receipt area</th>
 </table>
 
 <script src="script.js"></script>
