--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email"><br>
 
-  <label for="ccinfo">Credit card Number: (2222-2222-2222-2222)</label><br>
+  <label for="ccinfo">Credit card Number:</label><br>
   <input type="text" id="ccinfo" name="ccinfo"><br>
 
-  <label for="ccmonth">Credit card expiry month: (10-10)</label><br>
+  <label for="ccmonth">Credit card expiry month:</label><br>
   <input type="text" id="ccmonth" name="ccmonth"><br>
 
   <label for="ccyear">Credit card expiry Year</label><br>
